--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,7 +15,13 @@ sites:
     maxResponseTime: 3000
   - name: Amsterdam Schema
     url: $SITE_URL_SCHEMAS
-    maxResponseTime: 3000    
+    maxResponseTime: 3000
+  - name: BRP Bevragingen
+    url: $SITE_URL_BRP_BEVRAGINGEN
+    maxResponseTime: 3000
+  - name: BRP Kennisgvingen
+    url: $SITE_URL_BRP_KENNISGEVINGEN
+    maxResponseTime: 3000
   - name: Geosearch
     url: $SITE_URL_GEOSEARCH
     maxResponseTime: 3000
