Add acc environments for brp

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,6 +19,12 @@ sites:
   - name: BRP Bevragingen
     url: $SITE_URL_BRP_BEVRAGINGEN
     maxResponseTime: 3000
+  - name: BRP Acceptatie Kennisgvingen
+    url: $SITE_URL_BRP_ACC_KENNISGEVINGEN
+    maxResponseTime: 3000
+  - name: BRP Acceptatie Bevragingen
+    url: $SITE_URL_BRP_ACC_BEVRAGINGEN
+    maxResponseTime: 3000
   - name: BRP Kennisgvingen
     url: $SITE_URL_BRP_KENNISGEVINGEN
     maxResponseTime: 3000
